add subject issu was fixed

--- a/src/main/resources/templates/subject/addSubject.html
+++ b/src/main/resources/templates/subject/addSubject.html
@@ -43,7 +43,7 @@
         <div class="form-group">
             <label class="col-sm-2 control-label" data-th-for="${name}">Subject Name</label>
             <div class="col-sm-5">
-                <input type="text" id="name" class="form-control" data-th-field="*{name}" placeholder="Subject name">
+                <input type="text" id="name" class="form-control" data-th-field="*{name}" placeholder="Subject name" required>
             </div>
         </div>
         <div class="row container-fluid">
