--- a/src/main/resources/templates/hall/addHall.html
+++ b/src/main/resources/templates/hall/addHall.html
@@ -14,7 +14,7 @@
     <div class="col-4">
     </div>
     <div class="col-4">
-        <h1>Add a Hall</h1>
+        <h1>Add new Hall</h1>
     </div>
     <div class="col-4">
         <a href="/hall">
