--- a/src/main/resources/templates/payment/addAllBatchPayment.html
+++ b/src/main/resources/templates/payment/addAllBatchPayment.html
@@ -99,7 +99,7 @@
                   <tr >
                     <th >Month</th >
                     <th >Amount</th >
-                    <th >P. Status</th >
+                    <th >Payment Status</th >
                   </tr >
                   </thead >
                   <tbody >
