--- a/src/main/resources/templates/timeTable/addTimeTable.html
+++ b/src/main/resources/templates/timeTable/addTimeTable.html
@@ -7,20 +7,37 @@
 </head >
 <body >
 <!--Nav bar is included-->
-<nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
+<!--<nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >-->
 
-<div class="row bg-secondary" >
-  <div class="col-4" >
-  </div >
-  <div class="col-4" >
-    <h1 >TimeTable Management - Add New TimeTable</h1 >
-  </div >
-  <div class="col-4" >
-    <a href="/timeTable" >
-      <button class="btn btn-primary" >View All On Time Table</button >
-    </a >
-  </div >
-</div >
+<!--<div class="row bg-secondary" >-->
+<!--  <div class="col-4" >-->
+<!--  </div >-->
+<!--  <div class="col-4" >-->
+<!--    <h1 >TimeTable Management - Add New TimeTable</h1 >-->
+<!--  </div >-->
+<!--  <div class="col-4" >-->
+<!--    <a href="/timeTable" >-->
+<!--      <button class="btn btn-primary" >View All On Time Table</button >-->
+<!--    </a >-->
+<!--  </div >-->
+<!--</div >-->
+
+<!--Nav bar is included-->
+<nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
+
+<div class="row bg-link">
+  <div class="col-4">
+
+  </div>
+  <div class="col-4">
+    <h1>Timetable Management</h1>
+  </div>
+  <div class="col-4">
+    <a href="/timeTable/add">
+      <button class="btn btn-primary" align="center">New Time</button>
+    </a>
+  </div>
+</div>
 <div class="container-fluid" >
   <form action="/timeTable/save" data-th-object="${batches}" method="post" >
 
