--- a/src/main/resources/templates/batch/addBatch.html
+++ b/src/main/resources/templates/batch/addBatch.html
@@ -3,7 +3,7 @@
 <!--Styles, meta data, and title are included-->
 <head data-th-replace="~{fragments/header :: headerFragment}" >
   <meta charset="UTF-8" >
-  <title >Thymeleaf Springboot </title >
+  <title >Success Educational Institute</title >
 </head >
 <body >
 <!--Nav bar is included-->
@@ -13,11 +13,11 @@
   <div class="col-4" >
   </div >
   <div class="col-4" >
-    <h1 >Create a Batch</h1 >
+    <h1 >Add new Class</h1 >
   </div >
   <div class="col-4" >
     <a href="/batch" >
-      <button class="btn btn-primary" >All Batch</button >
+      <button class="btn btn-primary" >All Classes</button >
     </a >
   </div >
 </div >
@@ -27,9 +27,9 @@
 <div class="container" >
   <form action="/batch/save" data-th-object="${batch}" method="post" >
     <!--id-->
-    <div class="form-group text-right" data-th-if="${addStatus==false}" >
+    <div class="form-group" data-th-if="${addStatus==false}" >
       <div class="col-6" >
-        <label data-th-for="${id}" >Id</label >
+        <label data-th-for="${id}" >ID</label >
       </div >
       <div class="col-6" >
         <label >
@@ -40,7 +40,7 @@
     </div >
     <!--reference-->
     <div class="form-group" data-th-if="${addStatus==false}" >
-      <label class="col-6 control-label" data-th-for="${'code'}" >Batch Ref</label >
+      <label class="col-6 control-label" data-th-for="${'code'}" >Class Referance</label >
       <div class="col-6" >
         <input type="text" data-th-field="*{code}" id="batchId" placeholder="Batch ID" class="form-control"
                autofocus readonly >
@@ -117,14 +117,14 @@
         <label data-th-for="${name}" class="col-6 control-label" >Time Period</label >
         <div class="row" >
           <div class="container">
-            <div class="form-group" >
+            <div class="form-group col-6" >
               <label for="startAt" >FROM (opening hours 08:00 to 20:00) :</label >
               <input class="form-control" id="startAt" data-th-field="*{startAt}" type="time" step="3600" min="08:00"
                      max="20:00" />
             </div >
           </div>
           <div class="container">
-            <div class="form-group" >
+            <div class="form-group col-6" >
               <label for="endAt" >TO (opening hours 08:00 to 20:00) :</label >
               <input class="form-control" id="endAt" data-th-field="*{endAt}" type="time" step="3600" min="08:00"
                      max="20:00" />
@@ -136,10 +136,9 @@
     <div class="row">
       <!--batchName-->
       <div class="form-group" >
-        <label data-th-for="${name}" class="container" >Batch Name</label >
+        <label data-th-for="${name}" class="col-6" >Class Name</label >
         <div class="container-fluid" >
-          <input type="text" data-th-field="*{name}" id="name" placeholder="Batch Name" class="form-control"
-                 autofocus readonly >
+          <input type="text" data-th-field="*{name}" id="name" placeholder="Class Name" class="form-control" autofocus readonly>
         </div >
       </div >
     </div>
