--- a/src/main/resources/templates/batch/batch.html
+++ b/src/main/resources/templates/batch/batch.html
@@ -14,25 +14,25 @@
 
     </div>
     <div class="col-4">
-        <h1>Batch Management</h1>
+        <h1>Class Management</h1>
     </div>
     <div class="col-4">
         <a href="/batch/add">
-            <button class="btn btn-primary" align="center">New Batch</button>
+            <button class="btn btn-primary" align="center">Add new Class</button>
         </a>
     </div>
 </div>
 
 <div class="row">
-    <div class="container-lg">
-        <table class="table table-striped table-inverse table-responsive" id="myTable">
+    <div class="container mw-100">
+        <table class="table table-striped table-inverse" id="myTable">
             <thead class="thead-inverse">
             <tr>
                 <th>Index</th>
                 <th>Class Reference</th>
                 <th>Year</th>
                 <th>Grade</th>
-                <th>Batch Name</th>
+                <th>Class Name</th>
                 <th>Teacher Name</th>
                 <th>Subject Name</th>
                 <th>Modify</th>
@@ -56,10 +56,13 @@
                     </a>
                     <a data-th-href="${'/batch/delete/'+ batch.id}">
                         <button type="button" class="btn btn-danger">Delete</button>
-                    </a>
+                    </a></br>
                     <a data-th-href="${'/batchExam/add/'+ batch.id}">
                         <button type="button" class="btn btn-warning">Add Exam</button>
                     </a>
+                </td>
+                <td>
+
                 </td>
             </tr>
             </tbody>
