--- a/src/main/resources/templates/batchExam/batchExam.html
+++ b/src/main/resources/templates/batchExam/batchExam.html
@@ -14,17 +14,17 @@
 
     </div>
     <div class="col-4">
-        <h1>Batch Management</h1>
+        <h1>Exam Management</h1>
     </div>
     <div class="col-4">
-        <a href="/batch/add">
-            <button class="btn btn-primary" align="center">New Batch</button>
+        <a href="/batch">
+            <button class="btn btn-primary" align="center">Add Exam</button>
         </a>
     </div>
 </div>
 
 <div class="form-row">
-    <div class="container-fluid" data-th-fragment="batchExamFragment">
+    <div class="container mw-100" data-th-fragment="batchExamFragment">
         <table class="table table-striped table-inverse table-responsive" id="myTable">
             <thead class="thead-inverse">
             <tr>
