--- a/src/main/resources/templates/student/student-detail.html
+++ b/src/main/resources/templates/student/student-detail.html
@@ -25,19 +25,12 @@
     </div>
 </div>
 <!--Student detail-->
-<div class=" row container-fluid" data-th-fragment="studentDetailsFragment">
-    <div class="col-sm-3"></div>
-    <div class="col-sm-8">
+<div class="row" data-th-fragment="studentDetailsFragment">
+    <div class="col-6" style="background-color:palegreen;">
         <div class="form-group">
             <label data-th-for="${id}" class="col-sm-3 control-label">Index</label>
             <div class="col-sm-6">
                 <p type="text" id="id" class="form-control"   data-th-text="${studentDetail.id}">
-            </div>
-        </div>
-        <div class="form-group">
-            <label data-th-for="${regNo}" class="col-sm-3 control-label">Registration Number</label>
-            <div class="col-sm-6">
-                <p type="text" id="regNo" class="form-control"   data-th-text="${studentDetail.regNo}">
             </div>
         </div>
         <div class="form-group">
@@ -47,21 +40,9 @@
             </div>
         </div>
         <div class="form-group">
-            <label data-th-for="${lastName}" class="col-sm-3 control-label">Last name</label>
-            <div class="col-sm-6">
-                <p type="text" id="lastName" class="form-control"   data-th-text="${studentDetail.lastName}">
-            </div>
-        </div>
-        <div class="form-group">
             <label data-th-for="${gender}" class="col-sm-3 control-label">Gender</label>
             <div class="col-sm-6">
                 <p type="text" id="gender" class="form-control"   data-th-text="${studentDetail.gender}">
-            </div>
-        </div>
-        <div class="form-group">
-            <label data-th-for="${dob}" class="col-sm-3 control-label">Date of Birth</label>
-            <div class="col-sm-6">
-                <p type="text" id="dob" class="form-control"   data-th-text="${studentDetail.dob}">
             </div>
         </div>
         <div class="form-group">
@@ -71,15 +52,41 @@
             </div>
         </div>
         <div class="form-group">
-            <label data-th-for="${city}" class="col-sm-3 control-label">City</label>
-            <div class="col-sm-6">
-                <p type="text" id="city" class="form-control"   data-th-text="${studentDetail.city}">
-            </div>
-        </div>
-        <div class="form-group">
             <label data-th-for="${school}" class="col-sm-3 control-label">School</label>
             <div class="col-sm-6">
                 <p type="text" id="school" class="form-control"   data-th-text="${studentDetail.school.name}">
+            </div>
+        </div>
+        <div class="form-group">
+            <label data-th-for="${home}" class="col-sm-3 control-label">Fixed number</label>
+            <div class="col-sm-6">
+                <p type="text" id="home" class="form-control"   data-th-text="${studentDetail.home}">
+            </div>
+        </div>
+    </div>
+    <div class="col-6" style="background-color:palegreen;">
+        <div class="form-group">
+            <label data-th-for="${regNo}" class="col-sm-3 control-label">Registration Number</label>
+            <div class="col-sm-6">
+                <p type="text" id="regNo" class="form-control"   data-th-text="${studentDetail.regNo}">
+            </div>
+        </div>
+        <div class="form-group">
+            <label data-th-for="${lastName}" class="col-sm-3 control-label">Last name</label>
+            <div class="col-sm-6">
+                <p type="text" id="lastName" class="form-control"   data-th-text="${studentDetail.lastName}">
+            </div>
+        </div>
+        <div class="form-group">
+            <label data-th-for="${dob}" class="col-sm-3 control-label">Date of Birth</label>
+            <div class="col-sm-6">
+                <p type="text" id="dob" class="form-control"   data-th-text="${studentDetail.dob}">
+            </div>
+        </div>
+        <div class="form-group">
+            <label data-th-for="${city}" class="col-sm-3 control-label">City</label>
+            <div class="col-sm-6">
+                <p type="text" id="city" class="form-control"   data-th-text="${studentDetail.city}">
             </div>
         </div>
         <div class="form-group">
@@ -89,29 +96,21 @@
             </div>
         </div>
         <div class="form-group">
-            <label data-th-for="${home}" class="col-sm-3 control-label">Fixed number</label>
-            <div class="col-sm-6">
-                <p type="text" id="home" class="form-control"   data-th-text="${studentDetail.home}">
-            </div>
-        </div>
-        <div class="form-group">
             <label data-th-for="${guardian}" class="col-sm-3 control-label">Guardian</label>
             <div class="col-sm-6">
                 <p type="text" id="guardian" class="form-control"   data-th-text="${studentDetail.guardian}">
             </div>
         </div>
-
-
-        <div class="row container-fluid">
-            <div class="col-sm-2 col-sm-offset-2">
-                <a href="/student">
-                    <button type="button"  class="btn btn-danger btn-block" >Back</button>
-                </a>
-            </div>
-
-        </div>
     </div>
-    <div class="col-sm-1"></div>
+    </br><br>
+    <div class="row container-fluid" >
+        <div class="col-sm-4 col-sm-offset-2 align-middle" >
+            <a href="/student" >
+                <button type="button" class="btn btn-danger btn-block" >Back</button >
+            </a >
+        </div >
+    </div >
+
 </div>
 <!--footer is included-->
 <div data-th-replace="~{fragments/footer :: footerFragment}"></div>
