--- a/src/main/resources/templates/student/student.html
+++ b/src/main/resources/templates/student/student.html
@@ -19,57 +19,60 @@
   </a ></div >
 </div >
 
-<div class="container-fluid" >
-  <div class="col" data-th-fragment="studentsFragment" >
-    <table class="table table-striped table-inverse table-responsive container-lg" id="myTable" >
-      <thead class="thead-inverse" >
-      <tr >
-        <th >Index</th >
-        <th >Registration ID</th >
-        <th >First Name</th >
-        <th >Gender</th >
-        <th >School</th >
-        <th >Guardian</th >
-        <th >Mobile Number</th >
-        <th >Home Number</th >
-        <th >Modify</th >
-      </tr >
-      </thead >
-      <tbody >
-      <tr data-th-each="student, index : ${students}" >
-        <td data-th-text="${index.count}" ></td >
-        <td data-th-text="${student.regNo}" ></td >
-        <td data-th-text="${student.firstName}" ></td >
-        <td data-th-text="${student.gender}" ></td >
-        <td data-th-text="${student.school.name}" ></td >
-        <td data-th-text="${student.guardian}" ></td >
-        <td data-th-text="${student.mobile}" ></td >
-        <td data-th-text="${student.home}" ></td >
-        <td data-th-if="${!studentRemoveBatch}" >
-          <a data-th-href="${'/student/view/'+ student.id}" >
-            <button class="btn btn-info" >View</button >
-          </a >
-          <a data-th-href="${'/student/edit/'+ student.id}" >
-            <button class="btn btn-success" >Update</button >
-          </a >
-          <a data-th-href="${'/student/delete/'+ student.id}" >
-            <button class="btn btn-danger" >Delete</button >
-          </a >
-        </td >
-        <td data-th-if="${studentRemoveBatch}" >
-          <a data-th-href="${'/student/view/'+ student.id}" >
-            <button class="btn btn-info" >View</button >
-          </a >
-          <form action="/batchStudent/removeBatch" method="post">
-            <input type="hidden" name="batch" data-th-value="${batchDetail.id}" >
-            <input type="hidden" name="student" data-th-value="${student.id}" >
-            <button type="submit" class="btn btn-danger" >Remove</button >
-          </form >
-        </td >
-      </tr >
-      </tbody >
-    </table >
-  </div >
+<div class="row" >
+  <div class="container-fluid">
+    <div data-th-fragment="studentsFragment" >
+      <table class="table table-striped table-inverse" id="myTable" >
+        <thead class="thead-inverse" >
+        <tr >
+          <th >Index</th >
+          <th >Registration ID</th >
+          <th >First Name</th >
+          <th >Gender</th >
+          <th >School</th >
+          <th >Guardian</th >
+          <th >Mobile Number</th >
+          <th >Home Number</th >
+          <th >Modify</th >
+        </tr >
+        </thead >
+        <tbody >
+        <tr data-th-each="student, index : ${students}" >
+          <td data-th-text="${index.count}" ></td >
+          <td data-th-text="${student.regNo}" ></td >
+          <td data-th-text="${student.firstName}" ></td >
+          <td data-th-text="${student.gender}" ></td >
+          <td data-th-text="${student.school.name}" ></td >
+          <td data-th-text="${student.guardian}" ></td >
+          <td data-th-text="${student.mobile}" ></td >
+          <td data-th-text="${student.home}" ></td >
+          <td data-th-if="${!studentRemoveBatch}" >
+            <a data-th-href="${'/student/view/'+ student.id}" >
+              <button class="btn btn-info" >View</button >
+            </a >
+            <a data-th-href="${'/student/edit/'+ student.id}" >
+              <button class="btn btn-success" >Update</button >
+            </a >
+            <a data-th-href="${'/student/delete/'+ student.id}" >
+              <button class="btn btn-danger" >Delete</button >
+            </a >
+          </td >
+          <td data-th-if="${studentRemoveBatch}" >
+            <a data-th-href="${'/student/view/'+ student.id}" >
+              <button class="btn btn-info" >View</button >
+            </a >
+            <form action="/batchStudent/removeBatch" method="post">
+              <input type="hidden" name="batch" data-th-value="${batchDetail.id}" >
+              <input type="hidden" name="student" data-th-value="${student.id}" >
+              <button type="submit" class="btn btn-danger" >Remove</button >
+            </form >
+          </td >
+        </tr >
+        </tbody >
+      </table >
+    </div >
+  </div>
+
 </div >
 
 <!--footer is included-->
