--- a/src/main/resources/templates/timeTable/timeTable.html
+++ b/src/main/resources/templates/timeTable/timeTable.html
@@ -6,22 +6,25 @@
     <title>Success TimeTable Management</title>
 </head>
 <body>
+
 <!--Nav bar is included-->
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="row bg-secondary">
+<div class="row bg-link">
+    <div class="col-4">
+
+    </div>
+    <div class="col-4">
+        <h1>Timetable Management</h1>
+    </div>
     <div class="col-4">
         <a href="/timeTable/add">
-            <button class="btn btn-primary">New TimeTable</button>
+            <button class="btn btn-primary" align="center">Add new time slot</button>
         </a>
     </div>
-    <div class="col-4">
-        <h1>TimeTable Management</h1>
-    </div>
-    <div class="col-4"></div>
 </div>
 
-<div class="container">
+<div class="container-fluid">
     <table class="table table-striped table-inverse table-responsive" data-th-fragment="timeTable" id="myTable">
         <thead class="thead-inverse">
         <tr>
