add subject code to subject

--- a/src/main/resources/templates/subject/addSubject.html
+++ b/src/main/resources/templates/subject/addSubject.html
@@ -32,10 +32,10 @@
             </div>
         </div>
         <!--subjectCode-->
-        <div class="form-group">
+        <div class="form-group" data-th-if="${addStatus==false}">
             <label class="col-sm-2 control-label" data-th-for="${code}">Subject code</label>
             <div class="col-sm-4">
-                <input type="text" id="code" placeholder="Subject Code" class="form-control" data-th-field="*{code}">
+                <input type="text" id="code" placeholder="Subject Code" class="form-control" data-th-field="*{code}" readonly>
             </div>
         </div>
         <input type="text" data-th-field="*{liveDead}" hidden>
