--- a/src/main/resources/templates/subject/addSubject.html
+++ b/src/main/resources/templates/subject/addSubject.html
@@ -28,7 +28,7 @@
         <div class="form-group" data-th-if="${addStatus==false}">
             <label class="col-sm-3 control-label" data-th-for="${id}">Index</label>
             <div class="col-sm-9">
-                <input type="text" data-th-field="*{id}" id="id" placeholder="Index" class="form-control" autofocus>
+                <input type="text" data-th-field="*{id}" id="id" placeholder="Index" class="form-control" readonly>
             </div>
         </div>
         <!--subjectCode-->
