--- a/src/main/resources/templates/user/addUser.html
+++ b/src/main/resources/templates/user/addUser.html
@@ -8,7 +8,7 @@
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 
 <!--Page header -->
-<div class="container-fluid bg-secondary form-Border" >
+<div class="container-fluid form-Border" >
   <div class="row text-center formManagement border-info" >
     <div class="col" >
       <a class="btn btn-primary" href="/home" >
