--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head   data-th-replace="~{fragments/header :: headerFragment}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
 
 </head>
-<body id="loginBack" class="bg-gradient-light">
+<body id="loginBack">
 
-<div class="container" id="loginPage" >
+<div class="container" id="loginPage">
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="card-group shadow" style="margin-left: 10px; margin-right: 10px">
-                <div class="card bg-light p-4" >
-                    <form data-th-action="${'/login'}" method="post">
-                        <div class="card-body" align="center" style="margin-top: 25px" >
+                <div class="card bg-light p-4">
+                    <form th:action="${'/login'}" method="post">
+                        <div class="card-body" align="center" style="margin-top: 25px">
                             <h1>Login</h1>
-                            <p class="text-muted">Log in to your account</p><br>
+                            <p class="text-muted">Log on to your account</p><br>
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">
                                       <i class="fas fa-user"></i>
                                     </span>
                                 </div>
-                                <input class="form-control" type="text" placeholder="Username"  required id="username" th:name="${'username'}">
+                                <input class="form-control" type="text" placeholder="Username" id="username"
+                                       th:name="${'username'}">
                             </div>
                             <div class="input-group mb-4">
                                 <div class="input-group-prepend">
@@ -29,11 +30,13 @@
                                       <i class="fas fa-lock"></i>
                                     </span>
                                 </div>
-                                <input class="form-control" type="password" placeholder="Password" id="inputPassword"  required th:name="${'password'}">
+                                <input class="form-control" type="password" placeholder="Password" id="inputPassword"
+                                       th:name="${'password'}">
                             </div>
                             <div class="row">
                                 <div class="col-12">
-                                    <br> <button class="btn btn-primary px-4" type="submit">LOGIN</button>
+                                    <br>
+                                    <button class="btn btn-primary px-4" type="submit">LOGIN</button>
                                 </div>
 
                             </div>
@@ -44,8 +47,8 @@
                 <div class="card text-black-50 py-5 d-md-down-none" style="width:44%">
                     <div class="card-body text-center">
                         <div>
-                            <img class="card-img" src="img/LOGO.png" alt="Card image cap" >
-                            <h2><br>Success Educational Institute</h2>
+                            <img class="card-img" src="img/logo.png" alt="Card image cap">
+                            <h2><br>Success Educational Institute.</h2>
                             <p>Student Management System</p>
                         </div>
                     </div>
@@ -57,9 +60,9 @@
 
 
 <!--footer include-->
-<div   data-th-replace="~{fragments/footer :: footerFragment}"></div>
+<footer th:replace="~{fragments/footer :: footerFragment}"></footer>
 <!--script include-->
-<div data-th-replace="~{fragments/script :: scriptFragment}"></div>
+<script th:replace="~{fragments/script :: scriptFragment}"></script>
 
 </body>
 </html>
