--- a/src/main/resources/templates/login/passwordChange.html
+++ b/src/main/resources/templates/login/passwordChange.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head   data-th-replace="~{fragments/header :: headerFragment}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
     <title>Thymeleaf Springboot </title>
 </head>
 <body>
-<nav   data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
+<nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
 
 <div class="container-fluid bg-dark formBorder">
     <div class="col-md-12 flex-column ">
         <!--Container spaces-->
         <div class="row text-center">
-            <h4><b><span   data-th-text="${#authentication.name}"></span></b></h4>
+            <h4><b><span th:text="${#authentication.name}"></span></b></h4>
         </div>
         <div class="col-6 offset-2">
-            <form class="form-horizontal" id="form" data-th-action="${'/passwordChange'}" data-th-object="${pswChange}" th:method="POST">
+            <form class="form-horizontal" id="form" th:action="${'/passwordChange'}" th:object="${pswChange}" th:method="POST">
                 <div class="form-group col-md-12 col-sm-12 text-left flex-column">
                     <!--Old password-->
                     <div class="form-row text-right">
@@ -22,9 +22,9 @@
                             <label class="control-label " for="opsw">Old Password</label>
                         </div>
                         <div class="col-md-6 input-group">
-                            <input type="password" data-th-field="*{oldPassword}" id="opsw" placeholder="Enter Old Password Here"
+                            <input type="password" th:field="*{oldPassword}" id="opsw" placeholder="Enter Old Password Here"
                                    class="form-control pwd" name="opsw" required/>
-                            <span class="error" id="opswError" data-th-errors="*{oldPassword}"   data-th-if="${#fields.hasErrors('oldPassword')}">Current Password is error</span>
+                            <span class="error" id="opswError" th:errors="*{oldPassword}" th:if="${#fields.hasErrors('oldPassword')}">Current Password is error</span>
 
                         </div>
                     </div>
@@ -34,9 +34,9 @@
                             <label class="control-label " for="npsw">New Password</label>
                         </div>
                         <div class="col-md-6">
-                            <input type="password" data-th-field="*{newPassword}" id="npsw" placeholder="Enter New Password Here"
+                            <input type="password" th:field="*{newPassword}" id="npsw" placeholder="Enter New Password Here"
                                    class="form-control pwd" name="npsw" required/>
-                            <span class="error" data-th-errors="*{newPassword}"   data-th-if="${#fields.hasErrors('newPassword')}" id="npswError">Error New Password</span>
+                            <span class="error" th:errors="*{newPassword}" th:if="${#fields.hasErrors('newPassword')}" id="npswError">Error New Password</span>
                             <div class="text-right">
                                 <span id="resultOne"></span>
                             </div>
@@ -48,9 +48,9 @@
                             <label class="control-label " for="nrepsw">Re Enter New Password</label>
                         </div>
                         <div class="col-md-6">
-                            <input type="password" data-th-field="*{newPasswordConform}" id="nrepsw" placeholder="Re Enter New Password Here"
+                            <input type="password" th:field="*{newPasswordConform}" id="nrepsw" placeholder="Re Enter New Password Here"
                                    class="form-control pwd" name="nrepsw" required/>
-                            <span class="error" id="nrepswError" data-th-errors="*{newPasswordConform}"   data-th-if="${#fields.hasErrors('newPasswordConform')}">Error New Password</span>
+                            <span class="error" id="nrepswError" th:errors="*{newPasswordConform}" th:if="${#fields.hasErrors('newPasswordConform')}">Error New Password</span>
                             <div class="text-right">
                                 <span id="resultTwo"></span>
                             </div>
@@ -81,14 +81,14 @@
         </div>
     </div>
 </div>
-<div id="message"   data-th-if="${message}" data-th-class="${'alert alert-dismissable' + alertClass}">
+<div id="message" th:if="${message}" th:class="${'alert alert-dismissable' + alertClass}">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <strong> <span id="messageNote"   data-th-text="${message}"></span></strong>
+    <strong> <span id="messageNote" th:text="${message}"></span></strong>
 </div>
 <!--footer include-->
-<div   data-th-replace="~{fragments/footer :: footerFragment}"></div>
+<footer th:replace="~{fragments/footer :: footerFragment}"></footer>
 <!--script include-->
-<div data-th-replace="~{fragments/script :: scriptFragment}"></div>
+<script th:replace="~{fragments/script :: scriptFragment}"></script>
 
 </body>
 </html>
