--- a/src/main/resources/templates/role/addRole.html
+++ b/src/main/resources/templates/role/addRole.html
@@ -15,7 +15,7 @@
             </a>
         </div>
         <div class="col">
-            <h4 class="text-light text-center">
+            <h4 class="text-dark text-center">
                 <strong>
                     <span id="formHeader"   data-th-text="${addStatus==true?'New Role ':'Update Role'}"></span>
                 </strong>
