--- a/src/main/resources/templates/user/addUserStudent.html
+++ b/src/main/resources/templates/user/addUserStudent.html
@@ -16,7 +16,7 @@
       </a >
     </div >
     <div class="col" >
-      <h4 class="text-light text-center" >
+      <h4 class="text-dark text-center" >
         <strong >
           <span id="formHeader" data-th-text="${addStatus==true?'New User':'Update User'}" ></span >
         </strong >
@@ -38,14 +38,13 @@
         <div class="col-5 flex-column" >
           <div class="form-batch" >
             <div class="col-4" >
-              <label class="control-label" for="selectParameter" >Parameter :</label >
+              <label class="control-label" for="selectParameter" >Search by :</label >
             </div >
             <div class="col-8" >
               <select id="selectParameter" class="form-control" tabindex="1" required >
                 <option value="" >Please select</option >
                 <option value="regNo" >Registration Number</option >
                 <option value="firstName" >First Name</option >
-                <option value="mobile" >Mobile</option >
               </select >
             </div >
           </div >
