--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -9,7 +9,8 @@
 
 <div class="container-fluid form-Border" >
   <div class="row text-center formManagement border-info" >
-    <div class="col-8" >
+    <div class="col-3" ></div >
+    <div class="col-6" >
       <div class="form-row" >
         <a class="btn btn-success mr-2" data-th-href="${'/user/add'}" >
           <i class="fa fa-user-plus"  ></i > &nbsp; Add User Employee</a >
@@ -19,6 +20,10 @@
           <i class="fa fa-user-plus"  ></i > &nbsp; Add User Student</a >
       </div >
     </div >
+    <div class="col-3" ></div >
+  </div >
+  <div class="row text-center formManagement border-info" >
+    <div class="col-4" ></div >
     <div class="col-4" >
       <h4 class="text-info text-center" >
         <strong >
@@ -27,6 +32,7 @@
       </h4 >
     </div >
   </div >
+  <div class="col-4" ></div >
 </div >
 <div class="container-fluid  formBorder" >
   <div class="col-sm-12 flex-column " >
@@ -54,15 +60,14 @@
             </th >
             <th data-th-text="${user.enabled==true?'Active':'Blocked'}" ></th >
             <th data-th-text="${{user.createdAt}}" ></th >
-            <th ><a class="btn btn-success btn-sm" id="userView" ><i
-                  class="fa fa-folder-open" data-th-href="${'/user/' + user.id}" ></i >&nbsp;View</a >
-              <a class="btn btn-primary btn-sm" id="userEdit" data-th-href="${'/user/edit/' + user.id}" ><i
-                    class="fa fa-edit" ></i >&nbsp;Edit</a >
+            <th >
+              <a class="btn btn-success btn-sm" id="userView" >
+                <i class="fa fa-folder-open" data-th-href="${'/user/' + user.id}" ></i >&nbsp;View</a >
+              <a class="btn btn-primary btn-sm" id="userEdit" data-th-href="${'/user/edit/' + user.id}" >
+                <i class="fa fa-edit" ></i >&nbsp;Edit</a >
               <a class="btn btn-danger btn-sm" id="userRemove" data-th-href="${'/user/remove/' + user.id}"
-                 data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"
-              ><i
-                    aria-hidden="true" class="fa fa-trash" ></i >
-                Delete</a >
+                 data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
+                <i aria-hidden="true" class="fa fa-trash" ></i >Delete</a >
             </th >
           </tr >
           </tbody >
