--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -25,7 +25,7 @@
 <div class="container" >
   <form action="/subject/save" data-th-object="${subject}" method="post" >
     <div class="form-group" data-th-if="${addStatus==false}" >
-      <label class="col-sm-3 control-label" data-th-for="${'id'}" >Index</label >
+      <label class="col-sm-3 control-label" data-th-for="${id}" >Index</label >
       <div class="col-sm-9" >
         <input type="text" data-th-field="*{id}" id="id" placeholder="Index" class="form-control" readonly >
       </div >
@@ -63,11 +63,40 @@
     <div class="form-row" >
       <label data-th-if="${#fields.hasErrors('*')}" data-th-text="'Errors: '" >Errors: </label >
       <ul >
-        <li data-th-each="err : ${#fields.errors('*')}" data-th-text="${err}" class="bg-danger text-white" ></li >
+        <li data-th-each="err : ${#fields.errors('*')}" data-th-text="${err}" class="error" ></li >
       </ul >
     </div >
   </form >
 </div >
+<div data-th-replace="~{fragments/footer :: footerFragment}" ></div >
+<div data-th-replace="~{fragments/script :: scriptFragment}" ></div >
+</body >
+</html >
+<!DOCTYPE html>
+<html lang="en" >
+<!--Styles, meta data, and title are included-->
+<head data-th-replace="~{fragments/header :: headerFragment}" >
+  <meta charset="UTF-8" >
+  <title >Student Management system</title >
+</head >
+<body >
+<!--Nav bar is included-->
+<nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
+
+
+<div class="container-fluid">
+  <h1 class="h-50">404</h1>
+</div>
+
+<div class="container-fluid">
+  <div class="container-fluid text-center">
+    <a href="/home">
+      <button class="btn btn-info" type="submit">
+        <i class="fa fa-home" style="font-size: 20px"></i>&nbsp; Home
+      </button>
+    </a>
+  </div>
+</div>
 <div data-th-replace="~{fragments/footer :: footerFragment}" ></div >
 <div data-th-replace="~{fragments/script :: scriptFragment}" ></div >
 </body >
